# satori

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
examples/: sample_dataset.csv
src/: cli.py
src/config/: __init__.py  cli.py  manager.py
src/core/: run_manager.py
src/providers/: anthropic_provider.py  huggingface_provider.py  ollama_provider.py  openai_provider.py  openrouter_provider.py
src/satori/: cli.py
src/satori/config/: manager.py  models.py
src/satori/core/: run_manager.py
src/satori/io/: csv_loader.py  result_writer.py
src/satori/judges/: base.py  factory.py  generic_llm_judge.py  openai_judge.py
src/satori/providers/: __init__.py  base.py  factory.py  google_provider.py  openai_base.py  openai_provider.py
