[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "satori"
version = "0.1.0"
description = "Vendor-agnostic CLI tool for evaluating LLM responses using LLM-as-a-Judge approach"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "anthropic>=0.61.0",
    "google-genai>=1.29.0",
    "huggingface-hub>=0.34.3",
    "openai>=1.99.1",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "rich>=14.1.0",
    "typer>=0.16.0",
    "tenacity>=9.0.0",
    "pyyaml>=6.0.2",
]
authors = [{ name = "Beowolx" }]
keywords = ["llm", "evaluation", "benchmark", "ai", "judge", "cli"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
satori = "satori.cli:main"

[project.urls]
Homepage = "https://github.com/beowolx/satori"
Repository = "https://github.com/beowolx/satori"
Issues = "https://github.com/beowolx/satori/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/satori"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/README.md", "/LICENSE"]

[project.optional-dependencies]
dev = [
  "ruff>=0.12.7",
  "build>=1.2.2.post1",
  "twine>=5.1.1",
]

[tool.ruff]
line-length = 80
indent-width = 2
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = []

fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false
